# robocomp-robolab-deprecated

Interfaces/: CameraBus.ice
aprendizComp/: CMakeLists.txt  Doxyfile  aprendizComp.kdevelop
aprendizComp/src/: CMakeLists.txt  aprendizComp.cpp  aprendizI.cpp  aprendizI.h  config.h  worker.cpp  worker.h
aprendizComp/src/interpolador/: CMakeLists.txt  interpolador.cpp  interpolador.h  interpolador_lineal.cpp  interpolador_lineal.h
aprendizComp/src/learning/: CMakeLists.txt  curvaturaLEARNER.cpp  curvaturaLEARNER.h  distceldas.h  distceldas.tcpp  learning.cpp  learning.h  learningCODA.cpp  learningCODA.h  learning_old.cpp  learning_old.h  libceldas.cpp  libceldas.h  utils.h
aprendizComp/src/modelo-osg/: CMakeLists.txt  modelo.cpp  modelo.h  modeloBasicoPersona.cpp  modeloBasicoPersona.h  modeloHOAP.cpp  modeloHOAP.h  modeloHOAPpalotes.cpp  modeloHOAPpalotes.h  modeloNOMAD.cpp  modeloNOMAD.h  modeloNOMADpalotes.cpp  modeloNOMADpalotes.h  modeloVISOR.cpp  modeloVISOR.h  modeloVISORpalotes.cpp  modeloVISORpalotes.h  utils.h
aprendizComp/src/obs/: CMakeLists.txt  Observado.cpp  Observado.h  Observador.h  conversiones.cpp  conversiones.h  observadormodelo.h  observadormodelocoli.cpp  observadormodelocoli.h  observadormodelolinux.cpp
aprendizComp/src/rapid/: CMakeLists.txt  collide.C
aprendizComp/src/retargeting/: CMakeLists.txt  retargeting.cpp  retargeting.h
aprendizComp/src/tcp/: CMakeLists.txt  Cliente.c  Servidor.c  angulos.c  angulos.h
aprendizComp/src/tracker/: BIP.cpp  BIP.h  CMakeLists.txt  Clasificacion.cpp  Clasificacion.h  Config.cpp  Config.h  Correspondencia.cpp  Correspondencia.h  FuncTracking.cpp  FuncTracking.h  Funcpir.cpp  Funcpir.h  IO.cpp  IO.h  IORaw.cpp  IORaw.h  Silueta.cpp  Silueta.h  emd.cpp  emd.h
armRocioComp/: CMakeLists.txt  Doxyfile  armrocioComp.kdevelop
armRocioComp/src/: CMakeLists.txt  armrocioComp.cpp  armrocioI.cpp  armrocioI.h  config.h  worker.cpp  worker.h
baseComp/: CMakeLists.txt  Doxyfile  baseComp.kdevelop
baseComp/src/: CMakeLists.txt  baseComp.cpp  baseI.cpp  baseI.h  basehandler.cpp  basehandler.h  odometer.cpp  odometer.h
blackboardComp/: .project  CMakeLists.txt  DoxyFile  blackboard.cdsl  blackboardcomp.kdevelop
cenitalComp/: CMakeLists.txt  Doxyfile  cenitalComp.kdevelop
cenitalComp/src/: CMakeLists.txt  cenitalComp.cpp  cenitalDlg.ui  cenitalI.cpp  cenitalI.h  config.h  kalmanmeasure.h  kalmanmeasuresquare5points.cpp  kalmanmeasuresquare5points.h  kalmanmodel.h  kalmanmodeldifferentialwheels.cpp  kalmanmodeldifferentialwheels.h  kalmanmodellinear2dconstvel.cpp  kalmanmodellinear2dconstvel.h  roidetector.cpp  roidetector.h  worker.cpp  worker.h
cxtrelanComp/: CMakeLists.txt  Doxyfile  cxtrelanComp.kdevelop
dialogManagerComp/: .project  CMakeLists.txt  DoxyFile  dialogManagerComp.cdsl  dialogmanagercomp.kdevelop
dialogManagerComp/src/: CMakeLists.txt  CMakeListsSpecific.txt  config.h  dialogmanagerI.cpp  dialogmanagerI.h  dialogmanagercomp.cpp  genericworker.cpp  genericworker.h  guiDlg.ui  specificworker.cpp  specificworker.h
evaluacionkinectComp/: CMakeLists.txt  Doxyfile  evaluacionkinectComp.kdev4  evaluacionkinectComp.kdevelop
evaluacionkinectComp/src/: CMakeLists.txt  config.h  evaluacionDlg.ui  evaluacionkinectComp.cpp  evaluacionkinectI.cpp  evaluacionkinectI.h  worker.cpp  worker.h
evaluadorOffComp/: .project  CMakeLists.txt  DoxyFile  README  evaluadorOffComp.cdsl  evaluadoroffcomp.kdevelop  pablo sentado.txt
evaluadorOffComp/src/: CMakeLists.txt  CMakeListsSpecific.txt  config.h  evaluadoroffI.cpp  evaluadoroffI.h  evaluadoroffcomp.cpp  genericworker.cpp  genericworker.h  graphics.cpp  graphics.h  graphicsViewerDlg.ui  guiDlg.ui  openFileDlg.h  specificworker.cpp  specificworker.h  ui_guiDlg.h
juegoComp/: CMakeLists.txt  DoxyFile  juegoComp.cdsl  juegocomp.kdevelop
juegoComp/src/: CMakeLists.txt  CMakeListsSpecific.txt  config.h  etapa.cpp  etapa.h  genericworker.cpp  genericworker.h  guiDlg.ui  juegoI.cpp  juegoI.h  juegocomp.cpp  specificworker.cpp  specificworker.h  ui_guiDlg.h
laservisorComp/: CMakeLists.txt  Doxyfile  laservisorComp.kdevelop
laservisorComp/src/: CMakeLists.txt  config.h  laservisorComp.cpp  laservisorI.cpp  laservisorI.h  worker.cpp  worker.h
leandroComp/: CMakeLists.txt  Doxyfile  Doxyfile2  leandroComp.kdev4  leandroComp.kdevelop
leandroComp/src/: CMakeLists.txt  config.h  leandroComp.cpp  leandroDlg.ui  leandroI.cpp  leandroI.h  monitor.cpp  worker.cpp  worker.h
mimicComp/: CMakeLists.txt  DoxyFile  mimicComp.cdsl  mimiccomp.kdevelop
mimicComp/src/: CMakeLists.txt  config.h  genericworker.cpp  genericworker.h  mimicI.cpp  mimicI.h  mimiccomp.cpp  specificmonitor.cpp  specificworker.cpp  specificworker.h
moleComp/: CMakeLists.txt  Doxyfile
moleComp/src/: CMakeLists.txt  armarker.cpp  armarker.h  camara.cpp  camara.h  config.h  guiDlg.ui  moleComp.cpp  moleI.cpp  moleI.h  monitor.cpp  osgArt.cpp  osgArt.h  src.kdev4  worker.cpp  worker.h
moleComp/src/.kdev4/: src.kdev4
sevilla2Comp/src/: CMakeLists.txt  CMakeListsSpecific.txt  config.h  genericworker.cpp  genericworker.h  graphicsViewerDlg.ui  guiDlg.ui  muecasheadcomp.cpp  sesionDataWindowDlg.ui  sesiondata.cpp  sesiondata.h  sevilla2comp.cpp  sevillaDlg.ui  specificworker.cpp  specificworker.h
sevillaComp/src/: CMakeLists.txt  cameraDlgControl.cpp  config.h  juego.h  juego1.cpp  juego1.h  juego2.cpp  juego2.h  osgArt.h  proyectorDlg.ui  sevillaComp.cpp  sevillaDlg.ui  sevillaI.cpp  sevillaI.h  worker.cpp  worker.h
sickComp/src/: CMakeLists.txt  config.h  laserI.cpp  laserI.h  sickComp.cpp  worker.cpp  worker.h
sickLDComp/src/: CMakeLists.txt  config.h  genericmonitor.cpp  genericworker.cpp  genericworker.h  laserI.cpp  laserI.h  sickldcomp.cpp  specificmonitor.cpp  specificworker.cpp  specificworker.h
v4linuxComp/src/: CMakeLists.txt  camerabusI.cpp  camerabusI.h  config.h  monitor.cpp  v4linuxComp.cpp  worker.cpp  worker.h
visionComp/src/: CMakeLists.txt  config.h  roidetector.cpp  roidetector.h  tamanos.h  visionComp.cpp  visionI.cpp  visionI.h  worker.cpp  worker.h
(+226 files in other folders)
